fix: Popup viewport overflow

--- a/src/components/ui/Gap/Gap.module.scss
+++ b/src/components/ui/Gap/Gap.module.scss
@@ -1,4 +1,5 @@
 .Gap {
+  min-height: 0;
   gap: var(--gap);
   display: flex;
 
